--- a/PInvoke/CimFs/Vanara.PInvoke.CimFs.csproj
+++ b/PInvoke/CimFs/Vanara.PInvoke.CimFs.csproj
@@ -7,10 +7,18 @@
     <Description>PInvoke API (methods, structures and constants) imported from Windows CimFs.dll.</Description>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
     <TargetFrameworks>net20;net35;net40;net45;net5.0-windows;netstandard2.0;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
-    <AssemblyName>Vanara.PInvoke.Cim</AssemblyName>
+    <AssemblyName>Vanara.PInvoke.CimFs</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
-    <PackageTags>pinvoke;vanara;net-extensions;interop;Cim;CimFS</PackageTags>
-    <PackageReleaseNotes/>
+    <PackageTags>pinvoke;vanara;net-extensions;interop;Cim;CimFs</PackageTags>
+    <PackageReleaseNotes>Currently implements:
+
+Functions
+CimCloseImage CimCloseStream CimCommitImage CimCreateAlternateStream CimCreateFile CimCreateHardLink CimCreateImage CimDeletePath CimDismountImage CimMountImage CimWriteStream
+
+Structures
+CIMFS_FILE_METADATA CIMFS_IMAGE_HANDLE CIMFS_STREAM_HANDLE
+
+</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
