--- a/UnitTests/PInvoke/FhSvcCtl/FhSvcCtl.csproj
+++ b/UnitTests/PInvoke/FhSvcCtl/FhSvcCtl.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <AssemblyName>UnitTest.PInvoke.FhSvcCtl</AssemblyName>
+    <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\PInvoke\FhSvcCtl\Vanara.PInvoke.FhSvcCtl.csproj" />
