--- a/PInvoke/FhSvcCtl/Vanara.PInvoke.FhSvcCtl.csproj
+++ b/PInvoke/FhSvcCtl/Vanara.PInvoke.FhSvcCtl.csproj
@@ -10,7 +10,18 @@
     <AssemblyName>Vanara.PInvoke.FhSvcCtl</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;FhSvcCtl;file history</PackageTags>
-    <PackageReleaseNotes/>
+    <PackageReleaseNotes>Currently implements:
+
+Functions
+DllMain FhServiceBlockBackup FhServiceClosePipe FhServiceOpenPipe FhServiceReloadConfiguration FhServiceStartBackup FhServiceStopBackup FhServiceUnblockBackup
+
+Structures
+FH_SERVICE_PIPE_HANDLE
+
+Interfaces
+IFhConfigMgr IFhReassociation IFhScopeIterator IFhTarget
+
+</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
