--- a/Vanara.Library.nuspec
+++ b/Vanara.Library.nuspec
@@ -34,6 +34,7 @@
       <dependency id="Vanara.PInvoke.DnsApi" version="3.3.13" />
       <dependency id="Vanara.PInvoke.Drt" version="3.3.13" />
       <dependency id="Vanara.PInvoke.DwmApi" version="3.3.13" />
+      <dependency id="Vanara.PInvoke.FhSvcCtl" version="3.3.13" />
       <dependency id="Vanara.PInvoke.FirewallApi" version="3.3.13" />
       <dependency id="Vanara.PInvoke.FunDisc" version="3.3.13" />
       <dependency id="Vanara.PInvoke.Gdi32" version="3.3.13" />
