--- a/PInvoke/PortableDeviceApi/Vanara.PInvoke.PortableDeviceApi.csproj
+++ b/PInvoke/PortableDeviceApi/Vanara.PInvoke.PortableDeviceApi.csproj
@@ -10,7 +10,12 @@
     <AssemblyName>Vanara.PInvoke.PortableDeviceApi</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop;WPD;PortableDeviceApi</PackageTags>
-    <PackageReleaseNotes />
+    <PackageReleaseNotes>Currently implements:
+
+Interfaces
+IConnectionRequestCallback IEnumPortableDeviceConnectors IEnumPortableDeviceObjectIDs IPortableDevice IPortableDeviceCapabilities IPortableDeviceConnector IPortableDeviceContent IPortableDeviceContent2 IPortableDeviceDataStream IPortableDeviceDispatchFactory IPortableDeviceEventCallback IPortableDeviceKeyCollection IPortableDeviceManager IPortableDeviceProperties IPortableDevicePropertiesBulk IPortableDevicePropertiesBulkCallback IPortableDevicePropVariantCollection IPortableDeviceResources IPortableDeviceService IPortableDeviceServiceActivation IPortableDeviceServiceCapabilities IPortableDeviceServiceManager IPortableDeviceServiceMethodCallback IPortableDeviceServiceMethods IPortableDeviceServiceOpenCallback IPortableDeviceValues IPortableDeviceValuesCollection IWpdSerializer
+
+</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
