--- a/Vanara.Library.nuspec
+++ b/Vanara.Library.nuspec
@@ -34,6 +34,7 @@
       <dependency id="Vanara.PInvoke.DnsApi" version="3.3.14" />
       <dependency id="Vanara.PInvoke.Drt" version="3.3.14" />
       <dependency id="Vanara.PInvoke.DwmApi" version="3.3.14" />
+      <dependency id="Vanara.PInvoke.EnhancedStorage" version="3.3.14" />
       <dependency id="Vanara.PInvoke.FhSvcCtl" version="3.3.14" />
       <dependency id="Vanara.PInvoke.FirewallApi" version="3.3.14" />
       <dependency id="Vanara.PInvoke.FunDisc" version="3.3.14" />
@@ -60,6 +61,7 @@
       <dependency id="Vanara.PInvoke.P2P" version="3.3.14" />
       <dependency id="Vanara.PInvoke.Pdh" version="3.3.14" />
       <dependency id="Vanara.PInvoke.PeerDist" version="3.3.14" />
+      <dependency id="Vanara.PInvoke.PortableDeviceApi" version="3.3.14" />
       <dependency id="Vanara.PInvoke.PowrProf" version="3.3.14" />
       <dependency id="Vanara.PInvoke.Printing" version="3.3.14" />
       <dependency id="Vanara.PInvoke.ProjectedFSLib" version="3.3.14" />
