--- a/UnitTests/PInvoke/Multimedia/Multimedia.csproj
+++ b/UnitTests/PInvoke/Multimedia/Multimedia.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <AssemblyName>UnitTest.PInvoke.Multimedia</AssemblyName>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\PInvoke\Multimedia\Vanara.PInvoke.Multimedia.csproj" />
