--- a/PInvoke/VssApiMgd/Vanara.PInvoke.VssApiMgd.csproj
+++ b/PInvoke/VssApiMgd/Vanara.PInvoke.VssApiMgd.csproj
@@ -12,6 +12,7 @@
     <PackageTags>pinvoke;vanara;net-extensions;interop;VSS;VssApi;volume shadow copy service</PackageTags>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <!--<PlatformTarget>x86</PlatformTarget>-->
     <PackageReleaseNotes>Currently implements:
 
 Functions
