--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,24 +1,4 @@
 <Project>
-  <!-- Define Net5OrAbove variable -->
-  <PropertyGroup>
-    <Net5OrAbove>false</Net5OrAbove>
-    <Net5OrAbove Condition=" $(TargetFramework.StartsWith('net5')) Or $(TargetFramework.StartsWith('net6')) Or $(TargetFramework.StartsWith('net7')) ">true</Net5OrAbove>
-  </PropertyGroup>
-
-  <!-- Explicit FrameworkReference in .NET 5 or above -->
-  <PropertyGroup Condition=" $(Net5OrAbove) ">
-    <DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
-    <ImportWindowsDesktopTargets>false</ImportWindowsDesktopTargets>
-    <UseWindowsForms>false</UseWindowsForms>
-    <UseWPF>false</UseWPF>
-  </PropertyGroup>
-
-  <!-- Explict framework reference for .NET 5 or above -->
-  <ItemGroup Condition=" $(Net5OrAbove) ">
-    <FrameworkReference Include="Microsoft.NETCore.App" PrivateAssets="all" />
-    <FrameworkReference Include="Microsoft.WindowsDesktop.App" PrivateAssets="all" />
-  </ItemGroup>
-
   <!-- Add common settings for all projects -->
   <PropertyGroup>
     <DocumentationFile>$(OutputPath)$(AssemblyName).xml</DocumentationFile>
@@ -43,5 +23,31 @@
     <Compile Remove="**\~*.vb" />
     <None Include="**\~*.vb" />
     <SupportedPlatform Include="windows" />
+  </ItemGroup>
+    
+  <!-- Define Net5OrAbove variable -->
+  <PropertyGroup>
+    <Net5OrAbove>false</Net5OrAbove>
+    <Net5OrAbove Condition=" $(TargetFramework.StartsWith('net5')) Or $(TargetFramework.StartsWith('net6')) Or $(TargetFramework.StartsWith('net7')) ">true</Net5OrAbove>
+  </PropertyGroup>
+
+  <!-- Explicit target settings for .NET 5 or above -->
+  <PropertyGroup Condition=" $(Net5OrAbove) ">
+    <DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
+    <ImportWindowsDesktopTargets>false</ImportWindowsDesktopTargets>
+    <UseWindowsForms>false</UseWindowsForms>
+    <UseWPF>false</UseWPF>
+    <IsTrimmable>true</IsTrimmable>
+  </PropertyGroup>
+    
+  <!-- Explicit DEBUG target settings for .NET 5 or above -->
+  <PropertyGroup Condition=" '$(Configuration)'=='Debug' And $(Net5OrAbove)">
+    <EnableTrimAnalyzer>true</EnableTrimAnalyzer>
+  </PropertyGroup>
+
+  <!-- Explicit FrameworkReference in .NET 5 or above -->
+  <ItemGroup Condition=" $(Net5OrAbove) ">
+    <FrameworkReference Include="Microsoft.NETCore.App" PrivateAssets="all" />
+    <FrameworkReference Include="Microsoft.WindowsDesktop.App" PrivateAssets="all" />
   </ItemGroup>
 </Project>
