Removed PackageReference details for .NET 5 and 6 projects with System.Drawing.Common.

--- a/PInvoke/Gdi32/Vanara.PInvoke.Gdi32.csproj
+++ b/PInvoke/Gdi32/Vanara.PInvoke.Gdi32.csproj
@@ -28,7 +28,7 @@ ABC ABCFLOAT AXESLIST AXISINFO BITMAP BITMAPCOREHEADER BITMAPCOREINFO BITMAPFILE
     <ProjectReference Include="..\..\Core\Vanara.Core.csproj" />
     <ProjectReference Include="..\Shared\Vanara.PInvoke.Shared.csproj" />
   </ItemGroup>
-  <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('netcore')) Or $(TargetFramework.StartsWith('net5')) ">
-    <PackageReference Include="System.Drawing.Common" Version="5.0.1" />
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('netcore')) ">
+      <PackageReference Include="System.Drawing.Common" Version="5.0.3" />
   </ItemGroup>
 </Project>
