--- a/PInvoke/Gdi32/Vanara.PInvoke.Gdi32.csproj
+++ b/PInvoke/Gdi32/Vanara.PInvoke.Gdi32.csproj
@@ -6,9 +6,9 @@
   <PropertyGroup>
     <Description>PInvoke API (methods, structures and constants) imported from Windows Gdi32.dll</Description>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
+    <!--<ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
     <UseWindowsForms>true</UseWindowsForms>
-    <UseWPF>true</UseWPF>
+    <UseWPF>true</UseWPF>-->
     <TargetFrameworks>net20;net35;net40;net45;net5.0;net6.0;netstandard2.0;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.Gdi32</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
