--- a/PInvoke/User32/Vanara.PInvoke.User32.csproj
+++ b/PInvoke/User32/Vanara.PInvoke.User32.csproj
@@ -7,9 +7,9 @@
     <Description>PInvoke API (methods, structures and constants) imported from Windows User32.dll.</Description>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
     <TargetFrameworks>net20;net35;net40;net45;net5.0;net6.0;netstandard2.0;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
-    <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
+    <!--<ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
     <UseWindowsForms>true</UseWindowsForms>
-    <UseWPF>true</UseWPF>
+    <UseWPF>true</UseWPF>-->
     <AssemblyName>Vanara.PInvoke.User32</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop</PackageTags>
