--- a/Windows.Shell.Common/Vanara.Windows.Shell.Common.csproj
+++ b/Windows.Shell.Common/Vanara.Windows.Shell.Common.csproj
@@ -9,6 +9,15 @@
     <PackageTags>pinvoke;vanara;net-extensions;interop</PackageTags>
     <RootNamespace>Vanara.Windows.Shell</RootNamespace>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <PackageReleaseNotes>Currently implements:
+
+Classes
+IComObject, IJumpListItem, AddExtenderEventArgs, AppRegistration, BindContext, ComClassFactory, CommandVerb, CommandVerbDictionary, ComObject, ComObjWrapper&lt;T&gt;, ControlPanel, DragEventArgs, ExtenderProviderBase&lt;T&gt;, FileInUseHandler, FileTypeAssociation, IconLocation, IndirectResource, IndirectString, JumpList, JumpListDestination, JumpListItem, JumpListSeparator, JumpListTask, MemoryPropertyStore, MenuItemInfo, MessageEventArgs, MessageLoop, NativeClipboard, ProgId, PropertyBag, PropertyDescription, PropertyDescriptionList, PropertyStore, PropertyType, PropertyTypeList, ReadOnlyPropertyStore, RecycleBin, RegBasedDictionary&lt;T&gt;, RegBasedSettings, SearchCondition, ShellAssociation, ShellAssociationHandler, ShellCommand, ShellContextMenu, ShellDataTable, ShellDropTarget, ShellExecuteCommand, ShellFileInfo, ShellFileNewOpEventArgs, ShellFileOperationDialog, ShellFileOperations, ShellFileOpEventArgs, ShellFolder, ShellImageList, ShellItem, ShellItemArray, ShellItemChangeEventArgs, ShellItemChangeWatcher, ShellItemImages, ShellItemPropertyStore, ShellItemPropertyUpdates, ShellLibrary, ShellLibraryFolders, ShellLink, ShellNavigationHistory, ShellRegistrar, ShellSearch, ShellSearchViewSettings, StockIcon, TaskbarList, Utils, WallpaperManager, WallpaperMonitor, WallpaperSlideshow
+
+Enumerations
+ChangeFilters, DialogStatus, ExecutableType, FileUsageType, FolderItemFilter, LibraryFolderFilter, LibraryViewTemplate, LinkResolution, OperationFlags, OperationMode, OperationType, ShellIconType, ShellImageSize, ShellItemAttribute, ShellItemComparison, ShellItemDisplayString, ShellItemGetImageOptions, ShellItemToolTipOptions, TaskbarButtonProgressState, TextDataFormat, TransferFlags, VerbMultiSelectModel, VerbPosition, VerbSelectionModel, WallpaperFit
+
+</PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup Condition=" '$(TargetFramework)' == 'net35' ">
     <Reference Include="WindowsBase" />
