Removed support for .NET 2.0, 3.5, 4.0 and 4.5, .NET Core 2.0, 2.1, and 3.0 since all are or shortly will be out of support. Added support for .NET 4.6.2 and 4.8.

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -6,10 +6,10 @@
   <PropertyGroup>
     <DefineConstants>$(DefineConstants);$(PlatformTarget)</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup Condition=" $(TargetFramework.StartsWith('netstandard')) Or $(TargetFramework.StartsWith('netcore')) Or '$(TargetFramework)' == 'net45' Or $(TargetFramework.StartsWith('net5')) ">
+  <PropertyGroup>
     <DefineConstants>$(DefineConstants);ALLOWSPAN</DefineConstants>
   </PropertyGroup>
-  <ItemGroup Condition=" $(TargetFramework.StartsWith('net2')) Or $(TargetFramework.StartsWith('net3')) Or $(TargetFramework.StartsWith('net4')) ">
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('net4')) ">
     <Reference Include="System" />
   </ItemGroup>
     
