--- a/PInvoke/NetApi32/Vanara.PInvoke.NetApi32.csproj
+++ b/PInvoke/NetApi32/Vanara.PInvoke.NetApi32.csproj
@@ -6,7 +6,7 @@
   <PropertyGroup>
     <Description>PInvoke API (methods, structures and constants) imported from Windows NetApi32.dll.</Description>
     <AssemblyTitle>$(AssemblyName)</AssemblyTitle>
-    <TargetFrameworks>net20;net35;net40;net45;net5.0;net6.0;netstandard2.0;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>net462;net48;net5.0;net6.0;netstandard2.0;netcoreapp3.1</TargetFrameworks>
     <AssemblyName>Vanara.PInvoke.NetApi32</AssemblyName>
     <PackageId>$(AssemblyName)</PackageId>
     <PackageTags>pinvoke;vanara;net-extensions;interop</PackageTags>
@@ -21,7 +21,7 @@ ADMIN_OTHER_INFO AT_ENUM AT_INFO CONNECTION_INFO_0 CONNECTION_INFO_1 DAV_CALLBAC
 
 </PackageReleaseNotes>
   </PropertyGroup>
-  <ItemGroup Condition=" $(TargetFramework.StartsWith('net4')) Or '$(TargetFramework)' == 'netstandard2.0' Or '$(TargetFramework)' == 'netcoreapp2.1' ">
+  <ItemGroup Condition=" $(TargetFramework.StartsWith('net4')) Or '$(TargetFramework)' == 'netstandard2.0' ">
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
