Removed code and conditionals for obsolete target frameworks.

--- a/Core/Vanara.Core.csproj
+++ b/Core/Vanara.Core.csproj
@@ -53,4 +53,7 @@ CorrespondingAction, FileAttributeConstant, FileOpConstant, FilePermissionConsta
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="BkwdComp\" />
+  </ItemGroup>
 </Project>
