Updated package contents for Vanara.Library.

--- a/Vanara.Library.nuspec
+++ b/Vanara.Library.nuspec
@@ -20,6 +20,7 @@
       <dependency id="Vanara.Core" version="3.4.0" />
       <dependency id="Vanara.PInvoke.Accessibility" version="3.4.0" />
       <dependency id="Vanara.PInvoke.AclUI" version="3.4.0" />
+      <dependency id="Vanara.PInvoke.AMSI" version="3.4.0" />
       <dependency id="Vanara.PInvoke.BITS" version="3.4.0" />
       <dependency id="Vanara.PInvoke.Cabinet" version="3.4.0" />
       <dependency id="Vanara.PInvoke.CfgMgr32" version="3.4.0" />
@@ -84,11 +85,11 @@
       <dependency id="Vanara.PInvoke.UxTheme" version="3.4.0" />
       <dependency id="Vanara.PInvoke.Version" version="3.4.0" />
       <dependency id="Vanara.PInvoke.VirtDisk" version="3.4.0" />
-      <dependency id="Vanara.PInvoke.VssApiMgd" version="3.4.0" />
       <dependency id="Vanara.PInvoke.WcmApi" version="3.4.0" />
       <dependency id="Vanara.PInvoke.WcnApi" version="3.4.0" />
       <dependency id="Vanara.PInvoke.Wer" version="3.4.0" />
       <dependency id="Vanara.PInvoke.WinBio" version="3.4.0" />
+      <dependency id="Vanara.PInvoke.WinHTTP" version="3.4.0" />
       <dependency id="Vanara.PInvoke.WinINet" version="3.4.0" />
       <dependency id="Vanara.PInvoke.WinTrust" version="3.4.0" />
       <dependency id="Vanara.PInvoke.WlanApi" version="3.4.0" />
@@ -98,9 +99,12 @@
       <dependency id="Vanara.Security" version="3.4.0" />
       <dependency id="Vanara.SystemServices" version="3.4.0" />
       <dependency id="Vanara.VirtualDisk" version="3.4.0" />
+      <dependency id="Vanara.Windows.Extensions" version="3.4.0" />
       <dependency id="Vanara.Windows.Forms" version="3.4.0" />
       <dependency id="Vanara.Windows.Shell" version="3.4.0" />
       <dependency id="Vanara.Windows.Shell.Common" version="3.4.0" />
+      <dependency id="Vanara.WinUI.Extensions" version="3.4.0" />
+      <dependency id="Vanara.WPF.Extensions" version="3.4.0" />
     </dependencies>
   </metadata>
   <files />
