Lower System.ValueTuple version dependency.

--- a/Core/Vanara.Core.csproj
+++ b/Core/Vanara.Core.csproj
@@ -26,8 +26,8 @@ CorrespondingAction, FileAttributeConstant, FileOpConstant, FilePermissionConsta
 
 </PackageReleaseNotes>
   </PropertyGroup>
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net462' ">
-    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net462' Or '$(TargetFramework)' == 'netstandard2.0' ">
+    <PackageReference Include="System.ValueTuple" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup Condition=" $(TargetFramework.StartsWith('net4')) Or $(TargetFramework.StartsWith('netstandard')) ">
     <PackageReference Include="System.Memory" Version="4.5.4" />
